<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationParentActivity">

    <View
        android:id="@+id/screen3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/screen_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_registration_parent"
        android:layout_width="210dp"
        android:layout_height="38dp"
        android:layout_marginTop="80dp"
        android:gravity="top"
        android:paddingStart="10sp"
        android:text="@string/tv_registration_parent"
        android:textAppearance="@style/tv_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/screen3" />

    <EditText
        android:id="@+id/phone2"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/background_phone_1"
        android:paddingStart="12sp"
        android:text="@string/et_phone"
        android:textAppearance="@style/phone_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_registration_parent" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/background_pass_1"
        android:paddingStart="12sp"
        android:text="@string/et_password"
        android:textAppearance="@style/phone_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone2" />

    <Button
        android:id="@+id/button_registration2"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_enter"
        android:paddingTop="2dp"
        android:text="@string/btn_registration"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass2" />

    <Button
        android:id="@+id/btnback2"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/button_enter"
        android:paddingTop="1dp"
        android:paddingBottom="0dp"
        android:text="@string/btn_back"
        android:textAppearance="@style/button"
        app:layout_constraintBottom_toBottomOf="@+id/screen3"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>