<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParentProfileActivity">

    <View
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/screen_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_parent_profile"
        android:layout_width="170dp"
        android:layout_height="38dp"
        android:layout_marginTop="80dp"
        android:gravity="top"
        android:paddingStart="10sp"
        android:text="@string/tv_parent_profile"
        android:textAppearance="@style/tv_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/screen" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview3"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:elevation="12dp"
        app:cardCornerRadius="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_parent_profile">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/parent"
            tools:srcCompat="@drawable/parent" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/button_shop"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/button_enter"
        android:paddingTop="2dp"
        android:text="@string/btn_shop"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview3" />

    <Button
        android:id="@+id/btnMyChild"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/button_enter"
        android:paddingTop="2dp"
        android:text="@string/btn_my_children"
        android:textAppearance="@style/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_shop" />

</androidx.constraintlayout.widget.ConstraintLayout>