<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="66dp">

    <View
        android:id="@+id/screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/screen_1"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/tv_enter"
        android:layout_width="140dp"
        android:layout_height="38dp"
        android:layout_marginTop="80dp"
        android:gravity="top"
        android:paddingStart="10sp"
        android:text="@string/tv_registration"
        android:textAppearance="@style/tv_head"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/screen" />

    <Button
        android:id="@+id/buttonparent"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="176dp"
        android:background="@drawable/button_enter"
        android:paddingTop="1dp"
        android:paddingBottom="0dp"
        android:text="@string/btn_parent"
        android:textAppearance="@style/button"
        app:layout_constraintStart_toEndOf="@+id/cardview1"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter" />

    <Button
        android:id="@+id/buttonchild"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/button_enter"
        android:paddingTop="1dp"
        android:paddingBottom="0dp"
        android:text="@string/btn_child"
        android:textAppearance="@style/button"
        app:layout_constraintStart_toEndOf="@+id/cardview2"
        app:layout_constraintTop_toBottomOf="@+id/buttonparent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="272dp"
        android:elevation="12dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/parent"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="274dp"
            tools:srcCompat="@drawable/parent" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="52dp"
        android:layout_marginTop="64dp"
        android:elevation="12dp"
        app:cardCornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview1">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/child"
            tools:layout_editor_absoluteX="52dp"
            tools:layout_editor_absoluteY="410dp"
            tools:srcCompat="@drawable/child" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/userName"
        android:layout_width="250dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_pass_1"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@+id/tvUserName"
        tools:layout_editor_absoluteX="52dp" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="Введите имя пользователя:"
        android:textColor="#0B0B0B"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_enter"
        tools:layout_editor_absoluteX="52dp" />

    <!--    <Button-->
    <!--        android:id="@+id/btnback"-->
    <!--        android:layout_width="100dp"-->
    <!--        android:layout_height="30dp"-->
    <!--        android:layout_marginStart="32dp"-->
    <!--        android:layout_marginBottom="32dp"-->
    <!--        android:background="@drawable/button_enter"-->
    <!--        android:paddingTop="1dp"-->
    <!--        android:paddingBottom="0dp"-->
    <!--        android:text="@string/btn_back"-->
    <!--        android:textAppearance="@style/button"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent" />-->


</androidx.constraintlayout.widget.ConstraintLayout>